@@ -62,6 +62,11 @@ public:
     // another wxTextCtrl-like method
     void SetSelection(long from, long to);
 
+    // wxSpinCtrlBase methods
+    virtual int GetBase() const;
+    virtual bool SetBase(int base);
+
+
     // implementation only from now on
     // -------------------------------
 
@@ -147,6 +152,12 @@ protected:
 private:
     // Common part of all ctors.
     void Init();
+
+    // Adjust the text control style depending on whether we need to enter only
+    // digits or may need to enter something else (e.g. "-" sign, "x"
+    // hexadecimal prefix, ...) in it.
+    void UpdateBuddyStyle();
+
 
     DECLARE_DYNAMIC_CLASS(wxSpinCtrl)
     DECLARE_EVENT_TABLE()
